logica_proposicional_fase_1

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,6 +32,11 @@
                     Figuras Cónicas
                 </a>
             </li>
+            <li class="nav-item ">
+                <a href="/logica" class="btn btn-outline-primary">
+                    Logica Proposicional
+                </a>
+            </li>
         </ul>
     </header>
     {% block contenido %}{% endblock %}
