--- a/templates/mendel.html
+++ b/templates/mendel.html
@@ -60,7 +60,7 @@
     <div class="table-responsive">
         {% if matriz_alelos and cantidad_alelos %}
             {% if alelo_buscado != "999999999" %}
-                <div class="col respuesta " align = "center">
+                <div class="col resultado " align = "center">
                     Los genotipos con el/los alelo/s "{{ alelo_buscado }}" están resaltados
                 </div>
             {% endif %}
