--- a/templates/analitica.html
+++ b/templates/analitica.html
@@ -15,6 +15,8 @@
     <p class = "resultado">
         {% if ecuacion and mi_figura_conica == "no existe" %}
             La ecuación {{ ecuacion | safe }} no representa ninguna figura cónica
+        {% elif ecuacion and mi_figura_conica == "no se puede procesar" %}
+            La ecuación {{ ecuacion | safe }} está rotada, introduzcala rotada si quiere su desarrollo
 
         {% elif ecuacion and mi_figura_conica == "circunferencia" %}
             La ecuación {{ ecuacion | safe }} es de una {{ mi_figura_conica | safe }} {{ orientacion | safe }}
