backend terminado, falta forma de muestra con resultados parciales

--- a/static/newton.css
+++ b/static/newton.css
@@ -46,3 +46,7 @@ button{
         font-family: "Comic Sans MS";
         font-size: small;
 }
+.list_square{
+        list-style-type: square;
+        font-size: 20px;
+}
