--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,7 +34,7 @@
             </li>
             <li class="nav-item ">
                 <a href="/logica" class="btn btn-outline-primary">
-                    Logica Proposicional
+                    Lógica Proposicional
                 </a>
             </li>
         </ul>
