--- a/templates/mendel.html
+++ b/templates/mendel.html
@@ -11,7 +11,9 @@
                 {% for i in range(cantidad_alelos * 2) %}
                     <div class="col-1">
                         <input type="text" class="form-control"
-                               {% if gameto11 != [] %} placeholder="{{ gameto11[i] }}" {% endif %}
+                               {% if gameto11 != [] %}
+                               placeholder="{{ gameto11[i] }}"
+                               {% endif %}
                                id ="alelo1" name="alelo1[]" required maxlength="1" required>
                     </div>
                 {% endfor %}
