Logica terminado, añadí satiisfactibilidad y validez de proposiciones

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,9 @@ fondo_inicio
 
 {% block contenido %}
 <main>
+    <div  align="center">
+        Buena Suerte!
+    </div>
     <footer class="footer">
         <div class="container autor" align="right">
             Hugo Andres Oropeza Villalpando
