--- a/templates/mendel.html
+++ b/templates/mendel.html
@@ -47,7 +47,7 @@
                 </button>
             </div>
         {% else %}
-            <form class="row g-3" method="post" action="/logica" id="formulario">
+            <form class="row g-3" method="post" action="/mendel" id="formulario">
 
                 <div class="d-grid gap-2 col-3 mx-auto" >
                     <label class="form-label" for="cantidad_alelos">
