solo corregi un horror ortografico

--- a/templates/logica.html
+++ b/templates/logica.html
@@ -25,7 +25,7 @@
         <li>
             Consecuencia lógica(ejemplo): (X ^ Y) -> Z
             <p>
-                Será consecuensia lógica si resulta en tautología
+                Será consecuencia lógica si resulta en tautología
             </p>
         </li>
     </ul>
